# csb

./: .gitignore  Makefile  README.md  csb  go.mod  go.sum  hatch_build.py  pyproject.toml
cmd/csb-host-broker/: main.go
cmd/csb-host-run/: main.go
internal/allowlist/: allowlist.go  allowlist_test.go
internal/broker/: exec.go  server.go  server_test.go
internal/client/: client.go  client_test.go
internal/e2e/: e2e_test.go
internal/proto/: frames.go  frames_test.go
src/csb/: __init__.py  __main__.py  config.py  container.py  runtime.py  test_config.py  test_container.py  test_main.py  test_runtime.py  test_smoke.py
src/csb/addons/: mise.sh
